# dcspy

./: .bettercodehub.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .sonarcloud.properties  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GLCD_SDK.py  LICENSE.md  MANIFEST.in  QtGui_pyi.patch  README.md  SECURITY.md  aircraft.py  aircrafts.py  dcs_py.py  dcsbios.py  dcsbiosParser.py  dcspy.iss  dcspy.spec  dcspy_cli.spec  dcspy_onedir.spec  dcspy_onefile.spec  file_version_info.txt  generate_ver_file.py  gnerate_ver_file.py  latest_tag.py  mkdocs.yml  project.toml  punch_config.py  punch_version.py  pyproject.toml  qodana.yaml  readme.md  requirements.txt  requirements_dev.txt  (+7 more)
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/build-app/: action.yaml
.github/actions/setup-python/: action.yaml
.github/workflows/: codacy.yml  code_quality.yml  codeql-analysis.yml  codspeed.yml  coverage.yml  dependency-review.yml  license.yml  nuitka.yml  publish-pypi.yml  pyinstaller.yml  pyre.yml  python-ci.yml  python-package.yml  qodana.yml  release-ci.yml  release.yml  sonarcloud.yml  style.yml  test.yml  tox.yml  ver_check.yml  wheel.yml
dcspy/: AH-64D_BLK_II.yaml  F-14A-135-GR.yaml  F-15ESE.yaml  F-4E-45MC.yaml  Ka-50_3.yaml  __init__.py  aircraft.py  aircrafts.py  bios_utils.py  config.yaml  dcs_cli.py  dcs_g13.py  dcsbios.py  dcspy.py  gkey.py  lcd_sdk.py  led_sdk.py  log.py  logitech.py  migration.py  models.py  qt_gui.py  qtgui.qrc  qtgui_rc.py  run.py  run_qt.py  starter.py  tk_gui.py  utils.py
dcspy/CTkToolTip/: __init__.py  ctk_tooltip.py
dcspy/dcs/: aircrafts.py  bios.py
dcspy/resources/: FA-18C_hornet.yaml  config.yaml  license.txt
dcspy/sdk/: LogitechGkeyLib.h  LogitechLEDLib.h  __init__.py  key_sdk.py  lcd_sdk.py  led_sdk.py
dcspy/ui/: about.ui  qtdcs.ui  qtgui.ui
docs/: CONTRIBUTING.md  SECURITY.md  about.md  aircraft.md  bios_live.md  credits.md  dcsbios.md  dcspy.md  defender.md  devices.md  faq.md  index.md  install.md  issue.md  key.md  lcd.md  led.md  log.md  logitech.md  migration.md  models.md  planes.md  qt_gui.md  requirements.txt  run.md  sdk.md  starter.md  upgrade.md  usage.md  utils.md
fonts/: license.txt
images/: config.yaml
inno/: Bulgarian.isl  Catalan.isl  Corsican.isl  Czech.isl  Danish.isl  Dutch.isl  Finnish.isl  French.isl  German.isl  Hungarian.isl  Icelandic.isl  Italian.isl  Japanese.isl  Korean.isl  Norwegian.isl  Polish.isl  Portuguese.isl  Russian.isl  Slovak.isl  Slovenian.isl  Spanish.isl  Swedish.isl  Turkish.isl  Ukrainian.isl  dcspy.iss
pydcs/: aircrafts.py  dcs_g13.py  dcsbios.py  logitech.py  specelG13Handler.py
pydcs/sdk/: lcd_sdk.py
resources/: config.yaml
scripts/: gen_hashes.py  gen_ref_pages.py  generate_ver_file.py  latest_tag.py
src/: dcs_py.py
src/dcspy/: __init__.py  aircraft.py  dcsbios.py  led.py  log.py  logitech.py  migration.py  models.py  qt_first.py  qt_gui.py  qt_tools.py  qtgui.qrc  run.py  starter.py  utils.py
src/dcspy/resources/: AV8BNA.yaml  F-14A-135-GR.yaml  F-15ESE.yaml  F-16C_50.yaml  F-4E-45MC.yaml  Ka-50.yaml  LogitechLCDLib.h  config.yaml  license.txt
src/dcspy/sdk/: __init__.py  key_sdk.py  lcd_sdk.py  led_sdk.py
src/dcspy/ui/: about.ui  firstrun.ui  qtdcs.ui
tests/: conftest.py  helpers.py  test_aircraft.py  test_bios.py  test_dcsbios.py  test_dcspy.py  test_key_sdk.py  test_lcd_sdk.py  test_led_sdk.py  test_logitech.py  test_migration.py  test_models.py  test_qtgui.py  test_sdk.py  test_starter.py  test_utils.py  utils.py
tests/resources/: A-10C.yaml  F-16C_50.yaml  c.yml  config.yaml  dcs_bios_data.json  dcs_bios_data.json.1.DIGESTS  dcs_bios_data.json.2.DIGESTS  dcs_bios_data.json.3.DIGESTS  dcs_bios_data.json.4.DIGESTS  dcs_bios_data.json.5.DIGESTS  dcspy_3.6.1.json  migration.txt  no_new_line.hash.1.DIGESTS  no_new_line.hash.2.DIGESTS  no_new_line.hash.3.DIGESTS  no_new_line.hash.4.DIGESTS  test_plane.yaml
tests/resources/DCS.openbeta/Scripts/DCS-BIOS/doc/json/: A-10C.json  AH-64D.json  AV8BNA.json  AircraftAliases.json  CommonData.json  F-14.json  F-15E.json  F-16C_50.json  F-4E.json  FA-18C_hornet.json  Mi-24P.json  NS430.json
tests/resources/DCS.openbeta/Scripts/DCS-BIOS/lib/modules/common_modules/: CommonData.lua
tests/resources/DCS/Scripts/DCS-BIOS/doc/json/: A-10C.json  AH-64D.json  F-14.json  F-16C_50.json  F-4E.json  FA-18C_hornet.json  Ka-50.json  Mi-24P.json  Mi-8MT.json  NS430.json
tests/resources/Saved.Games.DCS/Scripts/DCS-BIOS/: BIOS.lua
tests/resources/Saved.Games.DCS/Scripts/DCS-BIOS/lib/: AircraftList.lua
tests/resources/Saved.Games.DCS/Scripts/DCS-BIOS/lib/ext/: JSON.lua
tests/resources/Saved.Games.DCS/Scripts/DCS-BIOS/test/: AircraftTest.lua  ParseIndicationTest.lua
tests/resources/Saved.Games.DCS/Scripts/DCS-BIOS/test/controls/: InputOnlyPushButtonTest.lua
tests/resources/Saved.Games.DCS/Scripts/DCS-BIOS/test/ext/: luaunit.lua
tests/resources/dcs_bios/doc/json/: A-10C.json  AH-64D.json  AV8BNA.json  AircraftAliases.json  CommonData.json  F-14.json  F-15E.json  F-16C_50.json  FA-18C_hornet.json  Ka-50.json  Mi-24P.json  Mi-8MT.json  NS430.json
uml/: classes.puml  logitech.puml  parser_states.puml  run_flow.puml
