[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'dcspy'
authors = [{name = 'Michal Plichta'}]
maintainers = [{name = 'Michal Plichta'}]
description = 'Software for integrating DCS Planes with Logitech keyboards (with and without LCD), mice and headphones.'
license = {text = 'MIT License'}
requires-python = '>=3.9'
readme = 'README.md'
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Environment :: Win32 (MS Windows)',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Microsoft :: Windows :: Windows 10',
    'Operating System :: Microsoft :: Windows :: Windows 11',
    'Topic :: Games/Entertainment',
    'Topic :: Games/Entertainment :: Simulation',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: System :: Hardware',
    'Topic :: Utilities',
]
keywords = [
    'dcsworld', 'dcs', 'digital combat simulator', 'eagle dynamics',
    'logitech', 'logitech sdk', 'logitech keyboard', 'logitech gaming', 'logitech mouse', 'logitech headphone',
    'G19', 'G510', 'G15', 'G13',
    'G910', 'G710', 'G110', 'G103', 'G105',
    'G11', 'G35', 'G633', 'G930', 'G933',
    'G600', 'G300', 'G400', 'G700', 'G9', 'MX518', 'G402', 'G502', 'G602',
]
dynamic = ['version']
dependencies = [
    'cffi==1.17.1',
    'eval-type-backport==0.2.0 ; python_version < "3.10"',
    'gitpython==3.1.44',
    'lupapy==2.2',
    'packaging==24.2',
    'pillow==11.1.0',
    'psutil==6.1.1',
    'pydantic==2.10.4',
    'pyside6==6.8.1',
    'pyyaml==6.0.2',
    'requests==2.32.3',
    'typing-extensions==4.12.2 ; python_full_version < "3.12"',
]

[project.urls]
Homepage = 'https://github.com/emcek/dcspy'
Documentation = 'https://dcspy.readthedocs.io/en/latest/'
Source = 'https://github.com/emcek/dcspy.git'
Changelog = 'https://github.com/emcek/dcspy/blob/master/CHANGELOG.md'

[project.scripts]
dcspy_cli = 'dcspy.run:run'

[project.gui-scripts]
dcspy = 'dcspy.run:run'

[project.optional-dependencies]
test = [
    'flake8==7.1.1',
    'interrogate==1.7.0',
    'isort==5.13.2',
    'lxml==5.3.0',
    'mypy==1.14.1',
    'pip-audit==2.7.3',
    'pycodestyle==2.12.1',
    'pytest==8.3.4',
    'pytest-codspeed==3.1.0',
    'pytest-cov==6.0.0',
    'pytest-qt==4.4.0 ; sys_platform == "win32"',
    'pytest-randomly==3.16.0',
    'ruff==0.8.6',
    'types-cffi==1.16.0.20241221',
    'types-pillow==10.2.0.20240822',
    'types-psutil==6.1.0.20241221',
    'types-pyinstaller==6.11.0.20241028',
    'types-pyyaml==6.0.12.20241230',
    'types-requests==2.32.0.20241016',
]
docs = [
    'black==24.10.0',
    'mkdocs==1.6.1',
    'mkdocs-gen-files==0.5.0',
    'mkdocs-literate-nav==0.6.1',
    'mkdocs-material==9.5.49',
    'mkdocs-plantuml==0.1.1',
    'mkdocs-section-index==0.3.9',
    'mkdocstrings==0.27.0',
    'mkdocstrings-python==1.13.0',
    'plantuml==0.3.0',
]

[tool.setuptools.dynamic]
version = {attr = 'dcspy.run.__version__'}

[tool.setuptools.packages.find]
where = ['src/']
include = ['dcspy*']
exclude = ['dcspy.tests*']

[tool.setuptools.package-data]
dcspy = [
    'resources/*.*',
    'img/dcspy_white.ico',
    'img/dcspy_black.ico',
    'sdk/*.h',
    'py.typed',
]

[tool.pytest.ini_options]
addopts = ['-q']
pythonpath = ['src']
testpaths = ['tests']
markers = [
    'qt6: marks tests for Qt6 verfification',
    'slow: marks tests as slow',
    'e2e: marks test as E2E',
]

[tool.interrogate]
ignore-init-method = false
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 90
verbose = 1
quiet = false
exclude = ['tests/test_*', 'src/dcspy/qtgui_rc.py']

[tool.ruff]
line-length = 160
lint.select = ['E', 'F', 'C90', 'D', 'RUF']
lint.ignore = ['D100', 'D101','D104', 'D105', 'D203', 'D204', 'D212', 'RUF001', 'RUF010']
extend-exclude = [
    'qtgui_rc.py',
    'tests/',
]

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.mypy]
#ignore_missing_imports = true
#no_warn_no_return = true
#check_untyped_defs = true
html_report = 'mypyhtml'
exclude = [
    '/qt_gui\.py$',
    '/qtgui_rc\.py$',
    'tests/',
    'generate_ver_file\.py$',
]

[[tool.mypy.overrides]]
module = 'dcspy.qt_gui'
follow_imports = 'skip'

[tool.isort]
line_length = 160

[tool.uv]
dev-dependencies = [
    'dcspy[test]',
    'dcspy[docs]',
    'build',
    'detect-test-pollution',
    'nuitka',
    'pre-commit',
    'pyinstaller',
]
