[metadata]
name = dcspy
version = 1.6.1
author = Michal Plichta
maintainer = Michal Plichta
description = Integrating DCS (Digital Combat Simulator) planes with Logitech G13/G15/G510/G19 LCD
long_description = README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.md
classifiers =
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Environment :: Win32 (MS Windows)',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Microsoft :: Windows :: Windows 10',
    'Topic :: Games/Entertainment',
    'Topic :: Games/Entertainment :: Simulation',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: System :: Hardware',
    'Topic :: Utilities'
keywords = logitech, logitech-sdk, logitech-keyboards, logitech-gaming, logitech-gaming-keyboard, dcs-world, dcs, g13, g15, g510, g19
platforms = win32, nt, Windows
url = https://github.com/emcek/dcspy
project_urls =
    Bug Reports = https://github.com/emcek/dcspy/issues
    Source = https://github.com/emcek/dcspy

[options]
include_package_data = True
packages = find:
zip_save = False
python_requires = >=3.7
install_requires =
    packaging
    Pillow
    psutil
    PyYAML
    requests
    typing-extensions; python_version < '3.8'

[options.entry_points]
console_scripts =
        dcspy = dcspy.dcspy:run

[options.extras_require]
test =
    pytest
    pytest-cov
    mypy
    tox
    flake8
    pylint

[options.packages.find]
exclude =
    tests*

[options.package_data]
dcspy = py.typed

[tool:pytest]
addopts = --mccabe --random -q
mccabe-complexity = *.py 5
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = True
html_report = mypyhtml

[pycodestyle]
count = True
ignore = E501
max-line-length = 250
statistics = True

[pydocstyle]
inherit = false
ignore = D100,D101,D104,D105,D203,D212,D401
match = .*\.py

[flake8]
max-line-length = 250
max-complexity = 5

[tox:tox]
envlist = py37,py38,py39,py310, mypy

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39
    3.10: py310, mypy

[testenv]
commands = pytest
deps =
    -r{toxinidir}/requirements_test.txt

[testenv:mypy]
basepython = python3.10
commands = mypy --ignore-missing-imports dcspy
deps =
    mypy
    lxml
    types-requests
    types-PyYAML
