[metadata]
name = dcspy
version = 2.0.0
author = Michal Plichta
maintainer = Michal Plichta
description = Integrating DCS (Digital Combat Simulator) planes with Logitech G13/G15/G510/G19 LCD
long_description = file: README.md, CHANGELOG.md, LICENSE.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE.md
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Win32 (MS Windows)
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: Microsoft :: Windows
    Operating System :: Microsoft :: Windows :: Windows 10
    Topic :: Games/Entertainment
    Topic :: Games/Entertainment :: Simulation
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Hardware
    Topic :: Utilities
keywords = logitech, logitech-sdk, logitech-keyboards, logitech-gaming, logitech-gaming-keyboard, dcs-world, dcs, g13, g15, g510, g19
platforms = win32, nt, Windows
url = https://github.com/emcek/dcspy
project_urls =
    Bug Reports = https://github.com/emcek/dcspy/issues
    Source = https://github.com/emcek/dcspy

[options]
include_package_data = True
packages = find:
zip_save = False
python_requires = >=3.7
install_requires =
    CTkMessagebox
    customtkinter >= 5.0.3
    GitPython
    packaging <= 21.3
    Pillow >= 9.3.0
    psutil
    PyYAML
    requests
    typing-extensions; python_version < '3.11'

[options.entry_points]
console_scripts =
        dcspy_cli = dcspy.run:run
gui_scripts  =
        dcspy = dcspy.run:run

[options.extras_require]
test =
    pytest
    pytest-random
    tox
    pyinstaller; sys_platform == 'win32'

[options.packages.find]
exclude =
    tests*

[options.package_data]
dcspy =
    py.typed
    *.ico
    *.png
    *.yaml
    *.ttf
    *.txt

[tool:pytest]
testpaths = ["tests"]
markers =
    dcsbios: marks tests for DCS-BIOS (deselect with '-m "not dcsbios"')

[mypy]
ignore_missing_imports = True
html_report = mypyhtml

[pycodestyle]
count = True
ignore = E501
max-line-length = 250
statistics = True

[pydocstyle]
inherit = false
ignore = D100,D101,D104,D105,D203,D204,D212,D401
match = .*\.py

[flake8]
max-line-length = 250
max-complexity = 6
show-source = True
statistics = True
count = True

[tox:tox]
envlist = py37,py38,py39,py310,cov311,mypy,flake8,pycodestyle,pydocstyle,interrogate,ruff

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: cov311, mypy, flake8, pycodestyle, pydocstyle, interrogate, ruff

[testenv]
commands = pytest --random -q --disable-warnings -m "not dcsbios"
deps =
    pytest-random

[testenv:cov311]
commands = pytest -q --disable-warnings --cov-report html --cov-report term-missing --cov=dcspy tests -m "not dcsbios"
deps =
    pytest-cov

[testenv:mypy]
basepython = python3.11
commands = mypy dcspy
deps =
    mypy
    lxml
    types-requests
    types-PyYAML

[testenv:flake8]
basepython = python3.11
commands =
     flake8 . --select=E9,F63,F7,F82 --show-source
     flake8 . --exit-zero --ignore=E501
deps =
    flake8

[testenv:pycodestyle]
basepython = python3.11
commands =
     pycodestyle --statistics --count dcspy
deps =
    pycodestyle

[testenv:pydocstyle]
basepython = python3.11
commands =
     pydocstyle --count dcspy
deps =
    pydocstyle

[testenv:interrogate]
basepython = python3.11
skip_install = true
commands =
    interrogate -v -c pyproject.toml
deps =
    interrogate

[testenv:ruff]
basepython = python3.11
commands =
     ruff .
deps =
    ruff
